--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <nav>
             <ul>
-                <li id="active"> <a href="home.html"> Welcome </a></li>  <!--Link to First Page-->
+                <li id="active"> <a href="index.html"> Welcome </a></li>  <!--Link to First Page-->
                  <li> <a href="secondpage.html"> Hygiene </a></li>  <!--Link to Second Page -->
                  <li> <a href="thirdpage.html"> Equipment </a></li> <!--Link to Third Page -->
                  <li> <a href="fourthpage.html"> Herbs & Spices </a> </li> <!--Link to Fourth Page -->
